--- a/app/styles/components/_md-tabs.scss
+++ b/app/styles/components/_md-tabs.scss
@@ -1,9 +1,14 @@
 md-tabs {
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 md-tab-content .list-group {
   margin-top: $global-margin;
   padding: 0;
   background: none;
+}
+
+.card-pf-view-tabs {
+  
 }
